--- a/Proyecto Redes/css/style.css
+++ b/Proyecto Redes/css/style.css
@@ -277,7 +277,7 @@ button {
 .navigation.navbar {
      float: right;
      padding: 27px;
-     margin-right:-50px;
+     
 }
 
 .navigation.navbar-dark .navbar-nav .nav-link {
@@ -392,7 +392,7 @@ article {
      padding:0;
      list-style-type:none;
      display:flex;
-     position:absolute;
+    /* position:absolute;*/
        right:50px;
    /*   min-width:60%; */
    }
@@ -404,7 +404,7 @@ article {
      display:inline-block;
      
    /*   background-color:green; */
-     min-width:120px;
+     min-width:250px;
    
    } 
    #navbarsExample04 > nav > ul > li > a {
